--- a/scss/_photo.scss
+++ b/scss/_photo.scss
@@ -19,30 +19,30 @@
         display: none;
     }
 
-    h3 > a {
-        color: #fff;
-        text-decoration: none;
-        font-weight: normal;
-        position: relative;
-    }
+    // h3 > a {
+    //     color: #fff;
+    //     text-decoration: none;
+    //     font-weight: normal;
+    //     position: relative;
+    // }
 
-    h3 > a:before {
-        content: "";
-        width: 100%;
-        height: 2px;
-        bottom: 0;
-        left: 0;
-        background-color: #fff;
-        visibility: hidden;
-        -webkit-transform: scaleX(0);
-        transform: scaleX(0);
-        -webkit-transition: all 0.3s ease-in-out 0s;
-        transition: all 0.3s ease-in-out 0s;
-    }
+    // h3 > a:before {
+    //     content: "";
+    //     width: 100%;
+    //     height: 2px;
+    //     bottom: 0;
+    //     left: 0;
+    //     background-color: #fff;
+    //     visibility: hidden;
+    //     -webkit-transform: scaleX(0);
+    //     transform: scaleX(0);
+    //     -webkit-transition: all 0.3s ease-in-out 0s;
+    //     transition: all 0.3s ease-in-out 0s;
+    // }
 
-    h3 > a:hover:before {
-        visibility: visible;
-        -webkit-transform: scaleX(1);
-        transform: scaleX(1);
-    }
+    // h3 > a:hover:before {
+    //     visibility: visible;
+    //     -webkit-transform: scaleX(1);
+    //     transform: scaleX(1);
+    // }
 }
