--- a/scss/portfolio.css
+++ b/scss/portfolio.css
@@ -88,6 +88,12 @@ body .sticky {
 #photo #concert, #photo #cafe {
   display: none;
 }
+#photo .carousel-control-prev-icon::after {
+  content: none;
+}
+#photo .carousel-item > div.carousel-caption {
+  background-color: rgba(156, 156, 156, 0.529);
+}
 
 #cs {
   padding-top: 2.5em;
