--- a/scss/portfolio.css
+++ b/scss/portfolio.css
@@ -75,8 +75,10 @@ body .sticky {
 }
 
 #photo {
-  padding-top: 2.5em;
   display: none;
+}
+#photo > div.carousel {
+  width: 90%;
 }
 #photo #decewFalls, #photo #mahtay, #photo #vinyl {
   padding-top: 3em;
@@ -88,7 +90,7 @@ body .sticky {
 #photo #concert, #photo #cafe {
   display: none;
 }
-#photo .carousel-control-prev-icon::after {
+#photo .carousel-control-prev-icon::after, #photo .carousel-control-next-icon::after {
   content: none;
 }
 #photo .carousel-item > div.carousel-caption {
