--- a/scss/_photo.scss
+++ b/scss/_photo.scss
@@ -18,7 +18,7 @@
         font-size: 2.5rem;
     }
 
-    #concert, #cafe {
+    #concertCarousel, #cafeCarousel {
         display: none;
     }
 
