Photo CSS changes

--- a/scss/_photo.scss
+++ b/scss/_photo.scss
@@ -1,9 +1,9 @@
 #photo {
     display: none;
 
-    > div.carousel {
-        width: 90%;
-    }
+    // > div.carousel {
+    //     width: 90%;
+    // }
     
     #decewFalls, #mahtay, #vinyl {
         padding-top: 3em;
