Messed up click js

--- a/scss/_photo.scss
+++ b/scss/_photo.scss
@@ -13,7 +13,7 @@
     //     top: 35%;
     // }
     
-    #decew1, #decew2, #decew3, #mahtay1, #mahtay2, #mahtay3, #vinyl1, #vinyl2, #vinyl3 {
+    #decew1, #decew2, #decew3, #mahtay1, #mahtay2, #mahtay3, #vinyl1, #vinyl2, #vinyl3, p > a {
         color: #e2e2e2;
         font-size: 2.5rem;
     }
