--- a/scss/portfolio.css
+++ b/scss/portfolio.css
@@ -81,7 +81,7 @@ body .sticky {
 #photo #decewFalls, #photo #mahtay, #photo #vinyl {
   padding-top: 3em;
 }
-#photo #decew1, #photo #decew2, #photo #decew3, #photo #mahtay1, #photo #mahtay2, #photo #mahtay3, #photo #vinyl1, #photo #vinyl2, #photo #vinyl3 {
+#photo #decew1, #photo #decew2, #photo #decew3, #photo #mahtay1, #photo #mahtay2, #photo #mahtay3, #photo #vinyl1, #photo #vinyl2, #photo #vinyl3, #photo p > a {
   color: #e2e2e2;
   font-size: 2.5rem;
 }
